# spotify-tui

./: Cargo.toml  README.md  log.err  rustfmt.toml
src/: app.rs  config.rs  main.rs  network.rs  user_config.rs  util.rs
src/cli/: clap.rs  cli_app.rs  handle.rs  util.rs
src/event/: events.rs
src/handlers/: album_list.rs  album_tracks.rs  artist.rs  artist_albums.rs  artists.rs  basic_view.rs  common_key_events.rs  dialog.rs  empty.rs  episode_table.rs  help_menu.rs  home.rs  input.rs  item_table.rs  library.rs  made_for_you.rs  mod.rs  playbar.rs  playlist.rs  podcasts.rs  recently_played.rs  search_results.rs  select_device.rs  track_table.rs
src/ui/: audio_analysis.rs  help.rs  mod.rs  util.rs
util/: Cargo.toml
util/proc-macros/: Cargo.toml
util/proc-macros/src/: lib.rs  to_static.rs
util/src/: lib.rs
