[package]
name = "spotify-tui"
description = "A terminal user interface for Spotify"
homepage = "https://github.com/tlowerison/spotify-tui"
documentation = "https://github.com/tlowerison/spotify-tui"
repository = "https://github.com/tlowerison/spotify-tui"
keywords = ["spotify", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.25.0"
authors = ["Trey Lowerison"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arboard = "3.3"
backtrace = "0.3"
chrono = "0.4"
clap = "4.4"
clap_complete = "4.4"
crossterm = "0.27"
derivative = "2.2"
derive_more = "0.99"
dirs = "5.0"
futures-util = "0.3"
paste = "1.0"
rand = "0.8"
rspotify = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.35", features = ["full"] }
tui = { version = "0.19", features = ["crossterm"], default-features = false }
unicode-width = "0.1"

[[bin]]
bench = false
path = "src/main.rs"
name = "spt"
