[package]
name = "spotify-tui-util-proc-macros"
description = "Utility macros fro spotify-tui."
homepage = "https://github.com/tlowerison/spotify-tui"
documentation = "https://github.com/tlowerison/spotify-tui"
repository = "https://github.com/tlowerison/spotify-tui"
keywords = ["spotify", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.1.0"
authors = ["Trey Lowerison"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }

[lib]
proc-macro = true
